[package]
name = "beatboxer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", features = ["tracing", "ws"] }
barrage = "0.2.3"
clap = { version = "4.3.19", features = ["derive"] }
crossbeam-skiplist = { version = "0.1.1", features = ["crossbeam-epoch"] }
dashmap = { version = "5.5.0", features = ["serde"] }
futures = "0.3.28"
lru = "0.11.0"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
postcard = { version = "1.0.6", features = ["alloc"] }
prost = "0.11.9"
rocksdb = { version = "0.21.0", features = ["serde"] }
serde = { version = "1.0.182", features = ["serde_derive", "derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync", "net", "io-std", "io-util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
