[package]
name = "beatboxer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adjacent-pair-iterator = { version = "1.0.0", optional = true}
anyhow = "1.0.72"
arrayvec = "0.7.4"
axum = { version = "0.6.19", features = ["tracing", "ws"] }
barrage = "0.2.3"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
crossbeam-skiplist = { version = "0.1.1", features = ["crossbeam-epoch"] }
dashmap = { version = "5.5.0", features = ["serde"] }
futures = "0.3.28"
gethostname = "0.4.3"
histogram = { version = "0.7.4", optional = true }
kanal = { version = "0.1.0-pre8", optional = true }
lazy_static = "1.4.0"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
nom = "7.1.3"
postcard = { version = "1.0.6", features = ["alloc"] }
prost = "0.11.9"
rand = { version = "0.8.5", optional = true }
random-string = { version = "1.0.0", optional = true }
reqwest = { version = "0.11.18", optional = true }
rocksdb = { version = "0.21.0", features = ["serde"], optional = true}
serde = { version = "1.0.182", features = ["serde_derive", "derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync", "net", "io-std", "io-util"] }
tokio-tungstenite = { version = "0.20.0" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
rocksdb = ["dep:rocksdb"]
stress_test = ["dep:kanal", "dep:rand", "dep:reqwest", "dep:adjacent-pair-iterator", "dep:histogram", "dep:random-string"]

[[bin]]
name = "stress_test"
required-features = ["stress_test"]
