[package]
name = "beatboxer"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.72"
arrayvec = "0.7.4"
atomic-counter = "1.0.1"
axum = { version = "0.6.19", features = ["tracing", "ws"] }
barrage = "0.2.3"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
crossbeam-skiplist = { version = "0.1.1", features = ["crossbeam-epoch"] }
dashmap = { version = "5.5.0", features = ["serde"] }
futures = "0.3.28"
gethostname = "0.4.3"
jemallocator = "0.5.4"
lazy_static = "1.4.0"
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
nom = "7.1.3"
postcard = { version = "1.0.6", features = ["alloc"] }
prost = "0.11.9"
rocksdb = { version = "0.21.0", features = ["serde"], optional = true}
serde = { version = "1.0.182", features = ["serde_derive", "derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync", "net", "io-std", "io-util"] }
tokio-tungstenite = { version = "0.20.0" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
rocksdb = ["dep:rocksdb"]
